Exposed token via response payload